--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "About"
-description: "「他单纯只想把日子过得不浪费」"
-header-img: "img/bg-me-2022.jpg"
+description: "「人生意义就在每一刻」"
+header-img: "img/bg-me-2022.png"
 header-mask: 0.3
 multilingual: true
 ---
