--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "「人生意义就在每一刻」"
-header-img: "img/bg-me-2022.png"
+header-img: "img/bg-me-2022.jpg"
 header-mask: 0.3
 multilingual: true
 ---
